<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <TextView
                android:id="@+id/minesweeper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/minesweeper"
                android:textColor="@color/red"
                android:textSize="35sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/best_time_15s"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="@+id/minesweeper"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="@+id/minesweeper"
                app:layout_constraintTop_toBottomOf="@+id/minesweeper" />

            <TextView
                android:id="@+id/lasttime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/last_game_time_40s"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/textView2"
                app:layout_constraintHorizontal_bias="0.481"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/select_difficulty"
                android:textColor="@color/black"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="@+id/lasttime"
                app:layout_constraintStart_toStartOf="@+id/lasttime"
                app:layout_constraintTop_toBottomOf="@+id/lasttime" />

            <RadioGroup
                android:id="@+id/radiogrp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/level">

                <RadioButton
                    android:id="@+id/easy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/easy"
                    android:textSize="20sp"
                    android:textColor="@color/Green"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.045"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/level" />

                <RadioButton
                    android:id="@+id/medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/medium"
                    android:textColor="@color/yellow"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="@+id/easy"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/easy"
                    app:layout_constraintTop_toBottomOf="@+id/easy" />

                <RadioButton
                    android:id="@+id/hard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hard"
                    android:textColor="@color/red"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="@+id/medium"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/medium"
                    app:layout_constraintTop_toBottomOf="@+id/medium" />


            </RadioGroup>

            <TextView
                android:id="@+id/or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radiogrp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/lightdar"
                android:text="@string/make_a_custom_board"
                android:textColor="@color/black"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="@+id/or"
                app:layout_constraintHorizontal_bias="0.512"
                app:layout_constraintStart_toStartOf="@+id/or"
                app:layout_constraintTop_toBottomOf="@+id/or" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/NoOfRow"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="Number Of Row"
                android:textColor="@color/red"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@+id/Numberofcol"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button2">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                 android:inputType="number"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Numberofcol"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="Number Of Column"
                android:textColor="@color/red"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/NoOfRow">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:inputType="number"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/NoOfMines"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/enter_mines"
                android:textColor="@color/red"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Numberofcol">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:inputType="number"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>
            <ImageButton
                android:id="@+id/play"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/teal_200"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                android:padding="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/NoOfMines"
                app:layout_constraintVertical_bias="1.0"
                app:srcCompat="@drawable/baseline_play_arrow_white_36dp" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/rules"
                android:layout_width="42dp"
                android:layout_height="34dp"
                android:background="@drawable/ic_baseline_question_answer_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.037"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.072" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>
